# GO_Midi

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  build_mingw.bat  debug_keymap.bat
.github/workflows/: dev.yml  release-dev.yml  release.yml
build_mingw_linux/wxWidgets/: wx-config
build_mingw_linux/wxWidgets/lib/wx/config/: inplace-msw-unicode-static-3.3  msw-unicode-static-3.3
build_mingw_linux/wxWidgets/lib/wx/include/msw-unicode-static-3.3/wx/: setup.h
build_mingw_linux/wxWidgets/locale/: af.gmo  ca.gmo  ca@valencia.gmo  el.gmo  fr.gmo  hu.gmo  ko_KR.gmo  ms.gmo  nb.gmo  pl.gmo  sk.gmo
keymaps/: 燕云十六声默认键位.txt
src/: App.cpp  App.h  Win32.manifest  resource.rc  wx.manifest
src/core/: KeyboardSimulator.cpp  KeyboardSimulator.h  PlaybackEngine.cpp  PlaybackEngine.h
src/midi/: MidiParser.cpp  MidiParser.h
src/ui/: KeymapSelector.cpp  KeymapSelector.h  MainFrame.cpp  MainFrame.h  PlaybackState.cpp  PlaybackState.h  UIHelpers.cpp  UIHelpers.h  Widgets.cpp  Widgets.h
src/util/: KeyManager.cpp  KeyManager.h  Logger.cpp  Logger.h  MemoryPool.h  NtpClient.cpp  NtpClient.h  PlaylistManager.cpp  PlaylistManager.h
wiki/: Home.md  定时播放.md  常见问题.md  快速开始.md  播放列表管理.md  通道配置.md  键位映射.md  高级功能.md
